// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Select with many options 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "--formField-maxLength": undefined,
    }
  }
>
  <select
    className="formField"
    id="4d32e270-bded-11e9-9859-a749597b1adf"
    onChange={[Function]}
  >
    <option>
      Foo
    </option>
    <option>
      Bar
    </option>
    <option>
      Baz
    </option>
    <option>
      Quux
    </option>
  </select>
  <span
    className="icon"
  >
    <div
      className="icon arrowDown base"
    />
  </span>
</div>
`;

exports[`renders a Select with no options 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "--formField-maxLength": undefined,
    }
  }
>
  <select
    className="formField"
    id="4d2b1a40-bded-11e9-9859-a749597b1adf"
    onChange={[Function]}
  />
  <span
    className="icon"
  >
    <div
      className="icon arrowDown base"
    />
  </span>
</div>
`;

exports[`renders a Select with one option 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "--formField-maxLength": undefined,
    }
  }
>
  <select
    className="formField"
    id="4d31a9f0-bded-11e9-9859-a749597b1adf"
    onChange={[Function]}
  >
    <option>
      Foo
    </option>
  </select>
  <span
    className="icon"
  >
    <div
      className="icon arrowDown base"
    />
  </span>
</div>
`;

exports[`renders correctly as large 1`] = `
<div
  className="wrapper large"
  style={
    Object {
      "--formField-maxLength": undefined,
    }
  }
>
  <select
    className="formField"
    id="4d337eb0-bded-11e9-9859-a749597b1adf"
    onChange={[Function]}
  >
    <option>
      Foo
    </option>
  </select>
  <span
    className="icon"
  >
    <div
      className="icon arrowDown base"
    />
  </span>
</div>
`;

exports[`renders correctly as small 1`] = `
<div
  className="wrapper small"
  style={
    Object {
      "--formField-maxLength": undefined,
    }
  }
>
  <select
    className="formField"
    id="4d333090-bded-11e9-9859-a749597b1adf"
    onChange={[Function]}
  >
    <option>
      Foo
    </option>
  </select>
  <span
    className="icon"
  >
    <div
      className="icon arrowDown base"
    />
  </span>
</div>
`;

exports[`renders correctly when disabled 1`] = `
<div
  className="wrapper disabled"
  style={
    Object {
      "--formField-maxLength": undefined,
    }
  }
>
  <select
    className="formField"
    disabled={true}
    id="4d33ccd0-bded-11e9-9859-a749597b1adf"
    onChange={[Function]}
  >
    <option>
      Foo
    </option>
  </select>
  <span
    className="icon"
  >
    <div
      className="icon arrowDown base"
    />
  </span>
</div>
`;

exports[`renders correctly when invalid 1`] = `
<div
  className="wrapper invalid"
  style={
    Object {
      "--formField-maxLength": undefined,
    }
  }
>
  <select
    className="formField"
    id="4d341af0-bded-11e9-9859-a749597b1adf"
    onChange={[Function]}
  >
    <option>
      Foo
    </option>
  </select>
  <span
    className="icon"
  >
    <div
      className="icon arrowDown base"
    />
  </span>
</div>
`;
